// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HexEncodedData should not cut the text in case the limit option is higher than the provided hexData 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1yff1ei-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-ezmk0c-MuiGrid-root"
      data-testid="tx-row-title"
      style="word-break: break-word;"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-1ew0eu5-MuiTypography-root"
      >
        Data (hex-encoded)
      </span>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
      data-testid="tx-data-row"
    >
      <div
        class="encodedData MuiBox-root css-0"
        data-testid="tx-hexData"
      >
        <span
          aria-label="Copy to clipboard"
          class=""
          data-mui-internal-clone-element="true"
          style="cursor: pointer;"
        >
          <span
            class="monospace"
          >
            <b
              aria-label="The first 4 bytes determine the contract method that is being called"
              class=""
              data-mui-internal-clone-element="true"
            >
              0xed2ad31e
            </b>
            d00088fc64d00c49774b2fe3fb7fd7db1c2a714700892607b9f77dc1
             
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`HexEncodedData should not highlight the data if highlight option is false 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1yff1ei-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-ezmk0c-MuiGrid-root"
      data-testid="tx-row-title"
      style="word-break: break-word;"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-1ew0eu5-MuiTypography-root"
      >
        Some arbitrary data
      </span>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
      data-testid="tx-data-row"
    >
      <div
        class="encodedData MuiBox-root css-0"
        data-testid="tx-hexData"
      >
        <span
          aria-label="Copy to clipboard"
          class=""
          data-mui-internal-clone-element="true"
          style="cursor: pointer;"
        >
          <span
            class="monospace"
          >
            0x102384763718984309876
             
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`HexEncodedData should render the default component markup 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-1yff1ei-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-ezmk0c-MuiGrid-root"
      data-testid="tx-row-title"
      style="word-break: break-word;"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-1ew0eu5-MuiTypography-root"
      >
        Data (hex-encoded)
      </span>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
      data-testid="tx-data-row"
    >
      <div
        class="encodedData MuiBox-root css-0"
        data-testid="tx-hexData"
      >
        <span
          aria-label="Copy to clipboard"
          class=""
          data-mui-internal-clone-element="true"
          style="cursor: pointer;"
        >
          <span
            class="monospace"
          >
            <b
              aria-label="The first 4 bytes determine the contract method that is being called"
              class=""
              data-mui-internal-clone-element="true"
            >
              0xed2ad31e
            </b>
            d00088fc64…
             
          </span>
        </span>
        <button
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button showMore css-izn2ge-MuiTypography-root-MuiLink-root"
          data-testid="show-more"
          type="button"
        >
          Show more
        </button>
      </div>
    </div>
  </div>
</div>
`;
